# agentic-gis-benchmark

./: .gitignore  README.md  config.py  docker-compose.devcontainer.yml  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
backend/: logging_utils.py
backend/database/: __init__.py  database.py
backend/embeddings/: __init__.py  build_layer_index.py  embeddings.py  retrieve_layers.py
backend/evaluation/: agent_graph.py  agent_models.py  agent_tools_node.py  eval_server.py  ground_truuth.json  pipeline_runner.py  reporting.py
backend/evaluation/prompts/: agent_helpers.py  prompt_v1.txt  prompt_v2.txt  prompt_v3.txt  prompt_v4.txt  prompt_v5.txt
backend/mcp/client/: client.py  parsing.py  tools_discovery.py  tools_steps.py
backend/mcp/server/: discovery_tools.py  geometry_utils.py  models.py  registry.py  run.py  step_storage.py  step_tools.py
backend/storage/: AzureBlobStorage.py
backend/tools/: __init__.py  langchain_tools.py
