[project]
name = "agentic-gis-benchmark"
version = "0.1.0"
description = "Nordkart Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.40.0",
  "pydantic==2.12.5",
  "pydantic-settings==2.12.0",
  "python-dotenv==1.2.1",
  "requests==2.32.5",
  "httpx==0.28.1",
  "langchain==1.2.8",
  "langchain-core==1.2.8",
  "langchain-openai==1.1.7",
  "langgraph==1.0.7",
  "langsmith==0.6.7",
  "mcp==1.26.0",
  "psycopg2-binary==2.9.11",
  "shapely==2.1.2",
  "pyproj==3.7.2",
  "orjson==3.11.7",
  "tiktoken==0.12.0",
  "tenacity==9.1.2",
  "pandas>=3.0.0",
  "psycopg[binary,pool]>=3.3.3",
  "firebase-admin>=7.1.0",
  "asyncpg>=0.31.0",
  "ollama>=0.6.1",
  "langchain-ollama>=1.0.1",
  "transformers>=5.3.0",
  "torch>=2.10.0",
  "numpy>=2.4.2",
  "azure-storage-blob>=12.28.0",
  "geopandas>=1.1.3",
  "duckdb>=1.5.1",
  "matplotlib>=3.10.9",
]
